--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg fixed-top">
-  <img class="navbar-brand" [routerLink]="['/']" src="assets/images/logo-02.svg" alt="logo">
+  <img class="navbar-brand" [routerLink]="['/']" src="assets/images/logo-alt.svg" alt="logo">
   <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button> -->
@@ -11,6 +11,9 @@
       </li>
       <li class="nav-item">
         <a class="nav-link" [routerLink]="['/services']" routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}">Services</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" [routerLink]="['/our-approach']" routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}">Our Approach</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" [routerLink]="['/contact-us']" routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}">Contact Us</a>
