--- a/src/styles.scss
+++ b/src/styles.scss
@@ -36,11 +36,15 @@ img::selection {
 }
 
 .main-container {
-  padding-top: 54px;
+  padding-top: 44px;
 }
 
 .container-fluid {
   padding: 0;
+}
+
+.greenText{
+  color: #00a651!important;
 }
 
 
