--- a/src/app/products/products.component.scss
+++ b/src/app/products/products.component.scss
@@ -1,24 +1,42 @@
 .products-page {
   .landing-section {
-    padding-top: 15vh;
-    background-image: linear-gradient(to bottom , rgba(0,0,0,0.65) 60% , transparent), url("../../assets/images/image-two.jpg");
+    padding-top: 70px;
+    background-image: linear-gradient(to bottom , rgba(0,0,0,0.65) 100% , transparent);
     background-repeat: no-repeat;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
-    background-position: center;
-    // background-attachment: fixed;
-    will-change: transform;
-    height: 450px;
+    background-position: bottom;
+    position: relative;
+    height: 350px;
+
+    .bg-img {
+      z-index: -1!important;
+      position: absolute;
+      top: 0;
+      height: 100%;
+      width: 100%!important;
+
+      img {
+        height: 100%;
+        width: 100%!important;
+        object-fit: cover;
+        position: absolute;
+        top: 0;
+      }
+    }
+
+    .container {
+      z-index: 10!important;
+    }
 
     h1 {
       font-weight: 600;
       font-family: 'Roboto', sans-serif!important;
       color: #fff;
-      letter-spacing: 2px;
-      font-size: 3.2rem;
-      margin-top: 30px;
+      letter-spacing: 3px;
+      font-size: 2.8rem;
       margin-bottom: 20px;
       line-height: 60px;
     }
@@ -30,12 +48,21 @@
       margin-bottom: 20px;
 
       span {
-        // color: #fff;
+        color: #00a651;
+      }
+    }
+
+    ul {
+      margin-bottom: 20px;
+      list-style: none;
+
+      li {
+        margin-bottom: 10px;
       }
     }
 
     .btn-cta {
-      background-color: #62A851;
+      background-color: #00a651;
       color: #fff;
       letter-spacing: 1px;
       font-weight: 600;
@@ -55,20 +82,69 @@
       height: auto;
       margin-top: 0!important;
       margin-top: 150px;
-      filter: drop-shadow(0px 3px 40px #62A85144);
+      filter: drop-shadow(0px 3px 40px #00a65144);
+    }
+  }
+
+  .introductory-section{
+    padding: 5vh 0;
+
+    p{
+      color: #80868b;
+      font-weight: 600;
+      margin-bottom: 30px;
+      line-height: 30px;
+      text-align: center;
+    }
+
+    .card {
+      border-radius: 8px;
+      padding: 20px;
+      margin-bottom: 20px;
+      box-shadow: 7px 7px 0 0 rgba(0,0,0,0.09);
+      background-color: #00a651;
+      min-height: 120px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      span{
+        font-size: 0.9rem;
+        color: #fff;
+        font-weight: 600;
+      }
     }
   }
 
   .content {
-    background-color: #f1f1f1;
+    background-color: #f9f9f9;
     padding-top: 40px;
     padding-bottom: 20px;
-    border-top: 5px solid #62A851;
+    border-top: 5px solid #00a651;
     // margin-bottom: 30px;
     h3 {
-      color: #5f6063;
+      color: #00a651;
       font-weight: 600;
-      margin-bottom: 40px;
+      margin-bottom: 10px;
+    }
+
+    .number{
+      height: 40px;
+      width: 40px;
+      display: inline-flex;
+      justify-content: center;
+      align-items: center;
+      border-radius: 50%;
+      font-size: 1.2rem;
+      color: #fff;
+      background-color: #00a651;
+      position: relative;
+      top:-5px;
+      margin-right: 5px;
+    }
+
+    .description{
+      color: #5f6063;
     }
 
     .card {
@@ -77,12 +153,13 @@
       margin-bottom: 20px;
       box-shadow: 7px 7px 0 0 rgba(0,0,0,0.09);
       background-color: #FCFCFC;
-      min-height: 315px;
+      // min-height: 315px;
+      height: 90%;
 
-      &:hover {
-        .btn-view span {
-          margin-left: 5px;
-        }
+      img{
+        height: 180px;
+        width: auto;
+        margin: 0 auto;
       }
 
       h4 {
@@ -101,6 +178,27 @@
         color: #5f6063;
         font-size: 0.9rem;
       }
+    }
+
+
+
+  }
+
+  .side-by-side{
+    .illustration-holder{
+      img{
+        max-width: 100%;
+        height: 400px;
+      }
+    }
+
+    h3{
+      font-size: 2.2rem;
+    }
+
+    p {
+      color: #5f6063;
+      font-size: 1.2rem;
     }
   }
 }
