docs ready for deployment

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -355,11 +355,11 @@
     }
 
     .media-section {
-      background-image: linear-gradient(to bottom, rgba(0,0,0,0.65) 100%, transparent), url("../../assets/images/media.jpg")!important;
+      background-image: linear-gradient(to bottom, rgba(0,0,0,0.65) 100%, transparent), url("../../assets/images/media.jpeg")!important;
     }
 
     .translations-section {
-      background-image: linear-gradient(to bottom, rgba(0,0,0,0.65) 100%, transparent), url("../../assets/images/translations.jpg")!important;
+      background-image: linear-gradient(to bottom, rgba(0,0,0,0.65) 100%, transparent), url("../../assets/images/black-woman.jpeg")!important;
       background-position:center!important;
     }
     .content {
