--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -81,7 +81,7 @@
 
   .products-section {
     padding: 50px 0;
-    height: 600px;
+    height: 500px;
     background-image: linear-gradient(to bottom, #FCFCFC 50% , #00a651 50%);
 
     h2 {
@@ -101,6 +101,7 @@
       margin-bottom: 20px;
       box-shadow: 7px 7px 0 0 rgba(0,0,0,0.09);
       background-color: #FCFCFC;
+      height: 90%;
 
       &:hover {
         .btn-view span {
