--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -53,7 +53,7 @@
   </div>
 
 
-  <div class="content">
+  <div class="content" id="product1">
     <div class="container">
 
       <h3 class="section-heading">Communications and Brand Consultancy</h3>
@@ -95,7 +95,7 @@
   </div>
 
 
-  <div class="content side-by-side">
+  <div class="content side-by-side" id="product2">
     <div class="container">
 
 
@@ -119,7 +119,7 @@
   </div>
 
 
-  <div class="content side-by-side">
+  <div class="content side-by-side" id="product3">
     <div class="container">
 
 
@@ -133,7 +133,7 @@
         </div>
         <div class="col-md-6">
           <h3 class="section-heading">Event Planning and Management</h3>
-          <p>with a clear brief on the output required, there should be brand recognition whilst working within franchises for prosperity.
+          <p>With a clear brief on the output required, there should be brand recognition whilst working within franchises for prosperity.
           </p>
         </div>
 
@@ -143,7 +143,7 @@
     </div>
   </div>
 
-  <div class="content side-by-side">
+  <div class="content side-by-side" id="product4">
     <div class="container">
 
 
