--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -26,7 +26,8 @@
             <h5>Services</h5>
             <ul>
               <li [routerLink]="['/services']" [queryParams]="{ service: '01' }">Communications consultancy</li>
-              <li [routerLink]="['/services']" [queryParams]="{ service: '02' }">Brand strategy</li>
+              <li [routerLink]="['/services']" [queryParams]="{ service: '02' }">Customer service training</li>
+              <li [routerLink]="['/services']" [queryParams]="{ service: '03' }">Event planning and management</li>
               <li [routerLink]="['/services']" [queryParams]="{ service: '03' }">Language translations</li>
             </ul>
 
