--- a/src/app/approach/approach.component.html
+++ b/src/app/approach/approach.component.html
@@ -1,1 +1,107 @@
-<p>approach works!</p>
+<div class="container-fluid approach">
+  <div class="landing-section">
+    <div class="container">
+
+      <div class="row align-items-center">
+        <div class="col-md-5">
+          <div class="profile-holder">
+            <img src="assets/images/liliane.jpg" alt="liliane">
+
+          </div>
+        </div>
+        <div class="col-md-7">
+
+          <div class="content">
+            <p>Hi, I am Liliane Binagwaho , <br>
+              A communications and brand visibility consultant with more than <span class="greenText">35 years' experience</span> in corporate communications, marketing, event management, and brand strategy. As a strategic advisor, I help small
+              businesses become trusted brands and
+              empower them to grow their businesses.
+            </p>
+            <p>Most new organizations struggle to execute their core business or projects and gain visibility for their efforts. Your company cannot achieve winning results without clearly-defined processes across critical growth areas, regardless of
+              whether it is marketing, branding, or communications. Here's where I come in...
+            </p>
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </div>
+
+  <div class="strategy-section">
+    <div class="container">
+
+      <div class="row align-items-center">
+        <div class="col-md-7">
+
+          <h3 class="section-heading">The promise </h3>
+          <p>I help you establish your position in the market and attract the business you desire.
+            Building a trusted working relationship begins with getting to know one another. I would be happy to chat informally with you
+          </p>
+          <a class="btn btn-cta-call">Make a call</a>
+        </div>
+        <div class="col-md-5">
+          <div class="illustration-holder">
+            <img src="assets/images/approach.svg" alt="illustration">
+          </div>
+        </div>
+      </div>
+
+
+      <div class="border-top mt-4 pt-4">
+
+        <h3 class="section-heading mb-4">How we can help </h3>
+
+        <div class="row ">
+          <div class="col-md-3">
+            <div class="card">
+
+              <div class="image-holder">
+                <img src="assets/images/clarity.svg" alt="illustration">
+
+              </div>
+              <h4> Clarity</h4>
+              <p>We assess what's working and what's not in your communications, brand, and customer care.</p>
+            </div>
+          </div>
+
+          <div class="col-md-3">
+            <div class="card">
+
+              <div class="image-holder">
+                <img src="assets/images/narrative-strategy.svg" alt="illustration">
+              </div>
+
+              <h4> Narrative Strategy</h4>
+              <p>Based on your mission and vision, I help you streamline your message to arrive at a consistent narrative across all communications.</p>
+            </div>
+          </div>
+
+          <div class="col-md-3">
+            <div class="card">
+
+              <div class="image-holder">
+                <img src="assets/images/brand-creation.svg" alt="illustration">
+              </div>
+
+              <h4>Full-Service Brand Creation</h4>
+              <p>I guide you through a deep dive into your business mission and bring clarity to your brand voice and journey.</p>
+
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="card">
+              <div class="image-holder">
+
+                <img src="assets/images/culture.svg" alt="illustration">
+              </div>
+
+              <h4> Culture</h4>
+              <p> I help double down on what works, make decisions by design, and add them to the organization's standard operating procedure.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</div>
