--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -12,17 +12,6 @@
 
         <div class="row">
           <div class="col-md-8">
-            <div hidden>
-              <h5>Follow us on social media</h5>
-              <div class="wrap mb-4">
-
-                <span title="facebook"><i class="fab fa-facebook-f"></i></span>
-                <span title="instagram"><i class="fab fa-instagram"></i></span>
-                <span title="whatsapp"><i class="fab fa-whatsapp pl-1"></i></span>
-
-              </div>
-            </div>
-
             <h5>Services</h5>
             <ul>
               <li [routerLink]="['/services']" [queryParams]="{ service: '01' }">Communications consultancy</li>
@@ -35,11 +24,13 @@
           </div>
           <div class="col-md-4">
 
-            <h5>Any inquiries</h5>
-
+            <h5>Talk to us on</h5>
             <div class="wrap mb-4">
-              <span><i class="fas fa-phone-alt mr-1"></i></span>
-              <span style="color: #f1f1f1;cursor:pointer" class="border-bottom pb-1">(254)700 000 000</span>
+
+              <span title="facebook"><i class="fab fa-facebook-f"></i></span>
+              <span title="instagram"><i class="fab fa-instagram"></i></span>
+              <span title="whatsapp"><i class="fab fa-whatsapp pl-1"></i></span>
+
             </div>
 
 
