--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -26,16 +26,24 @@
       <h3><u>Send us a message</u></h3>
 
       <div class="row">
-        <div class="col-md-5">
+        <div class="col-md-7">
           <form>
-            <div class="form-group">
-              <label>Name (or Company name)</label>
-              <input class="form-control" type="text">
+            <div class="row">
+              <div class="col-md-6">
+                <div class="form-group">
+                  <label>Name (or Company name)</label>
+                  <input class="form-control" type="text">
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="form-group">
+                  <label>Email</label>
+                  <input class="form-control" type="email">
+                </div>
+              </div>
             </div>
-            <div class="form-group">
-              <label>Email</label>
-              <input class="form-control" type="email">
-            </div>
+
+
             <div class="form-group">
               <label>Subject</label>
               <input class="form-control" type="text">
@@ -49,13 +57,11 @@
           </form>
         </div>
 
-        <div class="col-md-2">
-        </div>
 
         <div class="col-md-5">
           <div class="row">
             <div class="col-6 col-md-6">
-            
+
             </div>
             <div class="col-6 col-md-6"></div>
             <div class="col-12 col-md-6">
