--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -47,6 +47,7 @@
       color: #f1f1f1;
       padding: 5px 0;
       cursor: pointer;
+      font-size: 0.9rem;
 
       &:hover {
         text-decoration: underline;
