--- a/src/app/shared/navbar/navbar.component.scss
+++ b/src/app/shared/navbar/navbar.component.scss
@@ -18,22 +18,24 @@
 
   .nav-link {
     color: #00a651;
-    font-weight: 600;
-    letter-spacing: 1.5px;
-    border-radius: 3px;
-    font-size: 0.9rem;
+    // font-weight: 600;
+    font-family: 'Roboto', sans-serif!important;
+    letter-spacing: 1px;
+    border-radius: 0;
+    font-size: 1rem;
     padding-bottom: 3px;
-    border-bottom: 3px solid #fff;
+    border-bottom: 2px solid #fff;
 
 
     &:hover {
-      border-bottom: 3px solid #00a651;
+      border-bottom: 2px solid #00a651;
     }
   }
 }
 
 .active-link {
-  border-bottom: 3px solid #00a651!important;
+  border-bottom: 2px solid #00a651!important;
+  font-weight: 600!important;
 }
 
 @media (max-width: 770px) {
