added fadeIn animation to approach page onInit

--- a/src/app/approach/approach.component.html
+++ b/src/app/approach/approach.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid approach">
+<div class="container-fluid approach" [@fadeIn]>
   <div class="landing-section">
     <div class="container">
 
