--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -43,14 +43,24 @@
               </div>
             </div>
 
-
-            <div class="form-group">
-              <label>Subject</label>
-              <input class="form-control" type="text">
-            </div>
-            <div class="form-group">
+            <!-- <div class="form-group">
               <label>Message</label>
               <textarea class="form-control" name="name" rows="3"></textarea>
+            </div> -->
+
+            <div class="form-group">
+              <label for="">Category of interest</label>
+              <select class="form-control" name="category">
+                <option value="" sele>I want to hire your communication/brand Consultancy </option>
+                <option value="">Am looking for a great event planner</option>
+                <option value="">Looking to hire your Customer service training services</option>
+                <option value="">I need a French/English tutor or translator</option>
+              </select>
+            </div>
+
+            <div class="form-group">
+              <label>Where did you hear about us?</label>
+              <input class="form-control" type="text">
             </div>
 
             <button class="btn btn-send">SEND</button>
@@ -58,19 +68,10 @@
         </div>
 
 
-        <div class="col-md-5">
-          <div class="row">
-            <div class="col-6 col-md-6">
-
-            </div>
-            <div class="col-6 col-md-6"></div>
-            <div class="col-12 col-md-6">
-              <h5>Have an inquirie?</h5>
-              <p>Email us on <br>
-                <u>info@igicu.co.ke</u>
-              </p>
-            </div>
-          </div>
+        <div class="col-md-5 text-center">
+          <h5>Have an inquirie?</h5>
+          <p>Email us on <u><a href="mailto:info@igicu.co.ke">info@igicu.co.ke</a></u>
+          </p>
         </div>
       </div>
     </div>
