--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -2,43 +2,35 @@
   <div class="container">
 
     <div class="row">
-      <div class="col-md-4">
+      <div class="col-md-3">
 
         <img class="logo" src="assets/images/logo-02.svg" alt="logo">
 
+      </div>
+      <div class="col-md-5">
+        <h5>Services</h5>
+        <ul>
+          <li [routerLink]="['/services']" [queryParams]="{ service: '01' }">Communications consultancy</li>
+          <li [routerLink]="['/services']" [queryParams]="{ service: '02' }">Customer service training</li>
+          <li [routerLink]="['/services']" [queryParams]="{ service: '03' }">Event planning and management</li>
+          <li [routerLink]="['/services']" [queryParams]="{ service: '03' }">Language translations</li>
+        </ul>
+
 
       </div>
-      <div class="col-md-8">
+      <div class="col-md-4">
 
-        <div class="row">
-          <div class="col-md-8">
-            <h5>Services</h5>
-            <ul>
-              <li [routerLink]="['/services']" [queryParams]="{ service: '01' }">Communications consultancy</li>
-              <li [routerLink]="['/services']" [queryParams]="{ service: '02' }">Customer service training</li>
-              <li [routerLink]="['/services']" [queryParams]="{ service: '03' }">Event planning and management</li>
-              <li [routerLink]="['/services']" [queryParams]="{ service: '03' }">Language translations</li>
-            </ul>
+        <h5>Talk to us on</h5>
+        <div class="wrap mb-4">
 
+          <a href="https://www.instagram.com/igicuafricaconsultancy" target="_blank" title="instagram"><i class="fab fa-instagram"></i></a>
+          <a href="https://www.linkedin.com/company/igicu-africa-consultancy/" target="_blank" title="linked in"><i class="fab fa-linkedin-in pl-1"></i></a>
+          <!-- <span title="facebook"><i class="fab fa-facebook-f"></i></span> -->
+          <!-- <span title="whatsapp"><i class="fab fa-whatsapp pl-1"></i></span> -->
 
-          </div>
-          <div class="col-md-4">
-
-            <h5>Talk to us on</h5>
-            <div class="wrap mb-4">
-
-              <span title="facebook"><i class="fab fa-facebook-f"></i></span>
-              <span title="instagram"><i class="fab fa-instagram"></i></span>
-              <span title="whatsapp"><i class="fab fa-whatsapp pl-1"></i></span>
-
-            </div>
-
-
-
-          </div>
         </div>
-      </div>
 
+      </div>
     </div>
 
     <div class="copyright text-center">
