added contact details to contact section

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -51,7 +51,7 @@
             <div class="form-group">
               <label for="">Category of interest</label>
               <select class="form-control" name="category">
-                <option value="" sele>I want to hire your communication/brand Consultancy </option>
+                <option value="" selected>I want to hire your communication/brand Consultancy </option>
                 <option value="">Am looking for a great event planner</option>
                 <option value="">Looking to hire your Customer service training services</option>
                 <option value="">I need a French/English tutor or translator</option>
@@ -67,11 +67,12 @@
           </form>
         </div>
 
+        <div class="col-md-1"></div>
 
-        <div class="col-md-5 text-center">
+        <div class="col-md-4">
           <h5>Have an inquirie?</h5>
-          <p>Email us on <u><a href="mailto:info@igicu.co.ke">info@igicu.co.ke</a></u>
-          </p>
+          <a class="contact-details" href="tel:254724255924"><span><i class="fas fa-phone-alt"></i></span> +254724255924</a>
+          <a class="contact-details" href="mailto:igicuconsultancyafrica@gmail.com"><span><i class="fas fa-envelope"></i></span> igicuconsultancyafrica@gmail.com</a>
         </div>
       </div>
     </div>
