--- a/src/app/shared/navbar/navbar.component.scss
+++ b/src/app/shared/navbar/navbar.component.scss
@@ -12,6 +12,14 @@
     object-fit: contain;
   }
 
+  .navbar-toggler{
+    font-size: 1.5rem;
+    color: #3c4043;
+    position: relative;
+    top:-5px;
+    right: 10px;
+  }
+
   .nav-item {
     margin: 0 10px;
   }
@@ -38,15 +46,47 @@
   font-weight: 600!important;
 }
 
+.drop-down-menu {
+  background-color: #fff;
+  position: fixed;
+  top: 64px;
+  right: 0;
+  left: 0;
+  box-shadow: 0 10px 24px 0 rgba(0,0,0,0.2);
+  height: 0;
+  transition: all 0.2s;
+
+  .nav-item {
+    border-bottom: 1px solid #f1f1f160;
+    margin: 0;
+
+    .nav-link {
+      color: #5f6063;
+      text-align: right;
+      padding: 10px 20px!important;
+      margin: 0 !important;
+    }
+  }
+}
+
+.show-menu {
+  height: 190px;
+  border-top: 1px solid #00a651;
+
+}
+
 @media (max-width: 770px) {
   .navbar{
     padding: 5px 0;
     padding-left: 10px;
   }
   .navbar-brand {
-    // width: 200px;
-    // height: auto;
     position: relative;
-    top: -20px;
+    top: -10px;
+  }
+  .active-link {
+    color: #fff!important;
+    font-weight: 600!important;
+    background-color: #00a651!important;
   }
 }
