--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg fixed-top">
-  <img class="navbar-brand" [routerLink]="['/']" src="assets/images/logo-alt.svg" alt="logo">
+  <img class="navbar-brand" [routerLink]="['/']" src="assets/images/logo-alt.svg" alt="logo" (click)="showMenu = false;">
 
   <button class="navbar-toggler" type="button" (click)="toggleMenu()" aria-expanded="false" aria-label="Toggle navigation">
     <span *ngIf="!showMenu"><i class="fas fa-bars"></i></span>
